--- a/TypeScript/ExpressJS/hello-world-app/package.json
+++ b/TypeScript/ExpressJS/hello-world-app/package.json
@@ -15,6 +15,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/ejs": "^3.0.4",
     "@types/express": "^4.17.8",
+    "@types/node": "^14.11.2",
     "nodemon": "^2.0.4",
     "tsc": "^1.20150623.0",
     "typescript": "^4.0.3"
